--- a/src/component/Card.css
+++ b/src/component/Card.css
@@ -67,3 +67,17 @@
     transform: scale(2px);
 
 }
+@media screen and (max-width: 500px) {
+    .container{
+        flex-direction: column;
+        height: 50%;
+    }
+    .card{
+        height: 100%;
+        width: 100%;
+        margin: 30px;
+        padding: 10px;
+        justify-content: center;
+        align-items: center;  
+    }
+}
