--- a/src/component/Inputs.css
+++ b/src/component/Inputs.css
@@ -65,3 +65,9 @@ button:hover{
     background-color:rgb(255, 239, 236) ;
     
 }
+@media screen and (max-width: 500px) {
+    textarea{
+        width: 100%;
+
+    }
+}
